--- a/contacts.html
+++ b/contacts.html
@@ -8,67 +8,73 @@
     <link rel="stylesheet" href="../styl.css">
 </head>
 <body>
-    <div class="site">
-        <div class="site__menu">
-            <a href="../index.html">Главная</a>
-            <a href="contacts.html">Контакты</a>
-        </div>
-        <h1 class="main">Контакты</h1>
-        <div class="contact_us">
-            <h2 class="second">Contact Us</h2>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, recusandae.</p>
-        </div>
-    </div>
-    <div class="contact_centr">
-        <div class="contact_centr_up">
-            <div class="contact_sv">
-                <img src="../img/photo.jpg" 350px alt="photo" width="350px"> 
-                <h4 class="fourth">Address</h4>
-                <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <h4 class="fourth">Phone</h4>
-                <ul>
-                    <li>89553355522</li>
-                    <li>89513322564</li>
-                </ul>
-                <h4 class="fourth">Online service</h4>
-                <ul>
-                    <li><a href="">Сайт</a></li>
-                    <li><a href="">service@mail.ru</a></li>
-                    <li>г. Серпухов, ул. Ленина д.5 офис 415</li>
-                    <li>89052053315</li>
-                </ul>
+    <div class="container">
+        <div class="site">
+            <div class="site__menu">
+                <div class="link-1">
+                    <a href="../index.html">Главная</a>
+                </div>
+                <div class="link-2">
+                    <a href="contacts.html">Контакты</a>
+                </div>
             </div>
-            <div class="contact_message">
-                <h4 class="fourth">Send us message</h4>
-                Full Name <input class="fifth" type="text" placeholder="Name"><br>
-                Email <input class="fifth" type="email" placeholder="mail@mail.ru"><br>
-                Message <br> <textarea class="fifth" cols="30" rows="10"></textarea><br>
-                <button class="sending">submit</button>
+            <h1 class="main">Контакты</h1>
+            <div class="contact_us">
+                <h2 class="second">Contact Us</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, recusandae.</p>
             </div>
         </div>
-    </div>
-    <div class="map_contact">
-        <div class="map_style">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A507b4fa0342f95c7486c1e7922121b969a2d36431ebd908838551d6bcdc7918d&amp;width=659&amp;height=517&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
-    </div>
-    <div class="info_bottom">
-        <div class="info_bottom_up">
-            <div class="info_bottom_upp">
-                <h3 class="third">Availability of purchases</h3>
-                <p class="text">Increasing the availability of online shopping. Free shipping orders.</p>
+        <div class="contact_centr">
+            <div class="contact_centr_up">
+                <div class="contact_sv">
+                    <img src="../img/photo.jpg" 350px alt="photo" width="350px"> 
+                    <h4 class="fourth">Address</h4>
+                    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                    <h4 class="fourth">Phone</h4>
+                    <ul>
+                        <li>89553355522</li>
+                        <li>89513322564</li>
+                    </ul>
+                    <h4 class="fourth">Online service</h4>
+                    <ul>
+                        <li><a href="">Сайт</a></li>
+                        <li><a href="">service@mail.ru</a></li>
+                        <li>г. Серпухов, ул. Ленина д.5 офис 415</li>
+                        <li>89052053315</li>
+                    </ul>
+                </div>
+                <div class="contact_message">
+                    <h4 class="fourth">Send us message</h4>
+                    Full Name <input class="fifth" type="text" placeholder="Name"><br>
+                    Email <input class="fifth" type="email" placeholder="mail@mail.ru"><br>
+                    Message <br> <textarea class="fifth" cols="30" rows="10"></textarea><br>
+                    <button class="sending">submit</button>
+                </div>
             </div>
         </div>
-        <hr>
-        <div class="info_link">
-            <h4 class="fourth">Список контактов</h4>
-            <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>89157773322</li>
-                <li>mail@mail.ru</li>
-            </ul>
-            <div class="info_law">
-                <p class="text">Все права защищены</p>
+        <div class="map_contact">
+            <div class="map_style">
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A507b4fa0342f95c7486c1e7922121b969a2d36431ebd908838551d6bcdc7918d&amp;width=1140&amp;height=517&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>
+        </div>
+        <div class="info_bottom">
+            <div class="info_bottom_up">
+                <div class="info_bottom_upp">
+                    <h3 class="third third-3">Availability of purchases</h3>
+                    <p class="text">Increasing the availability of online shopping. Free shipping orders.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="info_link">
+                <!-- <h4 class="fourth">Список контактов</h4> -->
+                    <ul class="info_link-1">
+                        <li class="info_link-2">Lorem ipsum dolor sit amet.</li>
+                        <li class="info_link-3">89157773322</li>
+                        <li class="info_link-4">mail@mail.ru</li>
+                    </ul> 
+                <div class="info_law">
+                    <p class="text">Все права защищены</p>
+                </div>
             </div>
         </div>
     </div>
