--- a/index.html
+++ b/index.html
@@ -8,50 +8,69 @@
     <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <div class="site">
-        <div class="site_center">
-            <div class="site__menu">
-                <a href="index.html">Главная</a>
-                <a href="contacts/contacts.html">Контакты</a>
-            </div>
-            <h1 class="main">Главная</h1>
-            <div class="header">
-             <h1 class="main">Internet shop</h1>
-             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vero animi maiores sequi qui, rerum quo suscipit totam quia ullam architecto, placeat commodi odit quasi blanditiis fugit consequuntur veritatis veniam.</p>
-            </div>
-        </div>
-    </div>
-    <div class="info">
-        <h3 class="third">About Us</h3>
-        <div class="info_a">
-            <div class="info_b">
-                <h4 class="fourth">Business model</h4>
-                <p class="text">The business model is characterized as an online hypermarket, a universal store or a marketplace.</p>
-            </div>
-        </div>
-    </div>
-    <div class="our_info">
-        <h3 class="third">Our advantages</h3>
-        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam natus qui, voluptate vero deleniti!</p>
-    </div>
-    <div class="info_bottom">
-            <div class="info_bottom_up">
-                <div class="info_bottom_upp">
-                    <h3 class="third">Availability of purchases</h3>
-                    <p class="text">Increasing the availability of online shopping. Free shipping orders.</p>
+    <div class="what-we-do container">
+        <div class="site">
+            <div class="site_center">
+                <div class="site__menu">
+                    <div class="link-1">
+                        <a href="index.html">Главная</a>
+                    </div>
+                    <div class="link-2">
+                        <a href="contacts/contacts.html">Контакты</a>
+                    </div>
                 </div>
-            </div>    
-            <hr>
-            <div class="info_link">
-                <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>89157773322</li>
-                <li>mail@mail.ru</li>
-                </ul> 
-                <div class="info_law">
-                    <p class="text">Все права защищены</p>
+                <h1 class="main">Главная</h1>
+                <div class="header">
+                 <h1 class="main">Internet shop</h1>
+                 <p class="text-main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vero animi maiores sequi qui, rerum quo suscipit totam quia ullam architecto, placeat commodi odit quasi blanditiis fugit consequuntur veritatis veniam.</p>
                 </div>
             </div>
+        </div>
+        <div class="info">
+            <h3 class="third">About Us</h3>
+            <div class="info_a">
+                <div class="info_b">
+                    <h4 class="fourth">Business model</h4>
+                    <p class="text">The business model is characterized as an online hypermarket, a universal store or a marketplace.</p>
+                </div>
+                <div class="info_b2">
+                    <h4 class="fourth">Our production</h4>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi mollitia dolor corporis!</p>
+                </div>
+                <div class="info_b3">
+                    <h4 class="fourth">Our news</h4>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus possimus aliquam ea quod?</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="container">
+                    <div class="our_info">    
+                        <h4 class="fourth">Our advantages</h4>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam natus qui, voluptate vero deleniti!</p>
+                    </div>
+                <div class="info_bottom">
+                        <div class="info_bottom_up">
+                            <div class="info_bottom_upp">
+                                <h3 class="third third-3">Availability of purchases</h3>
+                                <p class="text">Increasing the availability of online shopping. Free shipping orders.</p>
+                            </div>
+                        </div>    
+                        <hr>
+                        <div class="info_link">
+                            <ul class="info_link-1">
+                            <li class="info_link-2">Lorem ipsum dolor sit amet.</li>
+                            <li class="info_link-3">89157773322</li>
+                            <li class="info_link-4">mail@mail.ru</li>
+                            </ul> 
+                            <div class="info_law">
+                                <p class="text">Все права защищены</p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
