my first commit in phpstorm

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -8,69 +8,100 @@
     <link rel="stylesheet" href="../styl.css">
 </head>
 <body>
-    <div class="site">
-        <div class="site__menu">
-            <a href="../index.html">Главная</a>
-            <a href="contacts.html">Контакты</a>
+    <div class="contact_top">
+        <div class="site">
+            <div class="container">
+                <div class="site__menu">
+                    <div class="link-1">
+                        <a href="../index.html"><img src="../img/logo.svg" alt="logo"></a>
+                    </div>
+                    <div class="link-2">
+                        <a href="contacts.html"><img src="../img/Vector.svg" alt="Vector"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="contact_us_top">
+                <div class="contact_us">
+                    <h2 class="second second_contact">Contact Us</h2>
+                    <p class="text_second_contact">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                </div>
+            </div>
         </div>
-        <h1 class="main">Контакты</h1>
-        <div class="contact_us">
-            <h2 class="second">Contact Us</h2>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, recusandae.</p>
+        <div class="contact_centr">
+            <div class="container container_map">
+                <div class="contact_centr_up">
+                    <div class="contact_sv">
+                        <img class="group" src="../img/Group.svg" 350px alt="photo">
+                        <div class="address_phone">
+                            <div class="address">
+                                <h4 class="fourth fourth_contact">ADDRESS</h4>
+                                <p class="text contact_link p_addres">Id convallis placerat sit sed duis id amet volutpat quam a, pharetra.</p>
+                            </div>
+                            <div class="phone">
+                                <h4 class="fourth fourth_contact">PHONE</h4>
+                            <ul type="none">
+                                <li> <div class="phone_tube"><div class="tube"><img src="../img/tube.svg" alt="poto"></div><a class="contact_link mail_phone" href="#">8955-335-55-22</a></div> </li>
+                                <li> <div class="phone_tube"><div class="tube"><img src="../img/tube.svg" alt="poto"></div><a class="contact_link mail_phone" href="#">8951-332-25-64</a></div> </li>
+                            </ul>
+                            </div>
+                            <div class="online_service">
+                                <h4 class="fourth fourth_contact">ONLINE SERVISE</h4>
+                            <ul type="none">
+                                <li> <div class="planeta_site"><div class="planeta"><img src="../img/planeta.svg" alt="poto"> </div> <a class="contact_link mail_phone" href="#">www.site.com</a></div> </li>
+                                <li> <div class="convert_mail"><div class="convert"> <img src="../img/convert.svg" alt="photo"> </div> <a class="contact_link mail_phone" href="#">service@mail.ru</a></div> </li>
+                            </ul>
+                            </div>
+                        </div>        
+                    </div>
+                    <div class="contact_message">
+                        <h4 class="fourth fourth_massege">SEND US MESSEGE</h4>
+                        <div class="massege_full">
+                            <div class="full_name"> <div class="full_name_top">Full Name</div><input class="fifth th_name" type="text" placeholder= "Name"></div>
+                        <div class="full_name"> <div class="full_name_top email">Email</div> <input class="fifth th_name" type="email" placeholder="mail@mail.ru"></div>
+                        <div class="full_name">
+                            <div class="full_name_top email">Message</div><textarea class="text fifth th_textarea" cols="30" rows="10" placeholder="Your Message"></textarea>
+                        </div>
+                        <button class="sending submit_message">submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+        </div>
+        <div class="map_contact">
+            <div class="map_style">
+                <div class="container container_map">
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A507b4fa0342f95c7486c1e7922121b969a2d36431ebd908838551d6bcdc7918d&amp;max-width=1140&amp;height=517&amp;lang=ru_RU&amp;scroll=true"></script>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="contact_centr">
-        <div class="contact_centr_up">
-            <div class="contact_sv">
-                <img src="../img/photo.jpg" 350px alt="photo" width="350px"> 
-                <h4 class="fourth">Address</h4>
-                <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <h4 class="fourth">Phone</h4>
-                <ul>
-                    <li>89553355522</li>
-                    <li>89513322564</li>
-                </ul>
-                <h4 class="fourth">Online service</h4>
-                <ul>
-                    <li><a href="">Сайт</a></li>
-                    <li><a href="">service@mail.ru</a></li>
-                    <li>г. Серпухов, ул. Ленина д.5 офис 415</li>
-                    <li>89052053315</li>
-                </ul>
+    <div class="footer">   
+        <div class="info_bottom">
+            <div class="container">
+                <div class="info_bottom_parent">
+                    <div class="info_bottom_upp">
+                        <h3 class="third_third-3">Intersted to woek with our team?</h3>
+                        <p class="text text_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                    <div class="info_bottom_talk">
+                        <a href="#" class="talk">Let’s Talk</a>
+                    </div>
+                </div>
             </div>
-            <div class="contact_message">
-                <h4 class="fourth">Send us message</h4>
-                Full Name <input class="fifth" type="text" placeholder="Name"><br>
-                Email <input class="fifth" type="email" placeholder="mail@mail.ru"><br>
-                Message <br> <textarea class="fifth" cols="30" rows="10"></textarea><br>
-                <button class="sending">submit</button>
-            </div>
-        </div>
-    </div>
-    <div class="map_contact">
-        <div class="map_style">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A507b4fa0342f95c7486c1e7922121b969a2d36431ebd908838551d6bcdc7918d&amp;width=659&amp;height=517&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
-    </div>
-    <div class="info_bottom">
-        <div class="info_bottom_up">
-            <div class="info_bottom_upp">
-                <h3 class="third">Availability of purchases</h3>
-                <p class="text">Increasing the availability of online shopping. Free shipping orders.</p>
-            </div>
-        </div>
-        <hr>
-        <div class="info_link">
-            <h4 class="fourth">Список контактов</h4>
-            <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>89157773322</li>
-                <li>mail@mail.ru</li>
-            </ul>
-            <div class="info_law">
-                <p class="text">Все права защищены</p>
-            </div>
-        </div>
+            <hr class="strip">
+            <div class="container">
+                <div class="info_link">
+                    <ul class="info_link-1" type="none">
+                    <li class="info_link-2 link_top"> <div class="span_link">1.</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li class="info_link-2"> <div class="span_link">2.</div> <a class="link_up" href="#">8-915-777-33-22</a></li>
+                    <li class="info_link-2"> <div class="span_link">3.</div> <a class="link_up" href="#">Hello.mail@mail.ru</a></li>
+                    </ul> 
+                    <div class="info_law">
+                        <p class="text text_law">Все права защищены</p>
+                    </div>
+                </div>
+            </div>      
+        </div> 
     </div>
 </body>
 </html>
