--- a/index.html
+++ b/index.html
@@ -8,50 +8,108 @@
     <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <div class="site">
-        <div class="site_center">
-            <div class="site__menu">
-                <a href="index.html">Главная</a>
-                <a href="contacts/contacts.html">Контакты</a>
-            </div>
-            <h1 class="main">Главная</h1>
-            <div class="header">
-             <h1 class="main">Internet shop</h1>
-             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vero animi maiores sequi qui, rerum quo suscipit totam quia ullam architecto, placeat commodi odit quasi blanditiis fugit consequuntur veritatis veniam.</p>
-            </div>
-        </div>
-    </div>
-    <div class="info">
-        <h3 class="third">About Us</h3>
-        <div class="info_a">
-            <div class="info_b">
-                <h4 class="fourth">Business model</h4>
-                <p class="text">The business model is characterized as an online hypermarket, a universal store or a marketplace.</p>
-            </div>
-        </div>
-    </div>
-    <div class="our_info">
-        <h3 class="third">Our advantages</h3>
-        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam natus qui, voluptate vero deleniti!</p>
-    </div>
-    <div class="info_bottom">
-            <div class="info_bottom_up">
-                <div class="info_bottom_upp">
-                    <h3 class="third">Availability of purchases</h3>
-                    <p class="text">Increasing the availability of online shopping. Free shipping orders.</p>
-                </div>
-            </div>    
-            <hr>
-            <div class="info_link">
-                <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>89157773322</li>
-                <li>mail@mail.ru</li>
-                </ul> 
-                <div class="info_law">
-                    <p class="text">Все права защищены</p>
+    <div class="wrapper">
+        <div class="vertex">
+            <div class="top">
+                <div class="container top__box">
+                            <div class="site__menu">
+                                <div class="link-1">
+                                    <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+                                </div>
+                                <div class="link-2">
+                                    <a href="contacts/contacts.html"><img src="img/Vector.svg" alt="Vector"></a>
+                                </div>
+                            </div>
+                        <div class="header">
+                         <h1 class="main">Internet shop</h1>
+                         <p class="text-main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vero animi maiores sequi qui, rerum quo suscipit totam quia ullam architecto, placeat commodi odit quasi blanditiis fugit consequuntur veritatis veniam.</p>
+                        <a href="#" class="top__botton">See Our Project</a>
+                        </div>
                 </div>
             </div>
+                <div class="what-we-do container">
+                    <div class="info">
+                        <h3 class="third">About Us</h3>
+                        <div class="info_a">
+                            <div class="info_b">
+                                <img class="card_img" src="img/card-1.svg" alt="card-1">
+                                <h4 class="fourth">Business model</h4>
+                                <p class="text">The business model is characterized as an online hypermarket, a universal store or a marketplace.</p>
+                                <div class="link_strelka">
+                                    <a class="card__link" href="#">Learn more</a>
+                                    <img class="strelka" src="img/strelka.svg" alt="photo">
+                                </div>
+                            </div>
+                            <div class="info_b">
+                                <img class="card_img" src="img/card-2.svg" alt="card-2">
+                                <h4 class="fourth">Our production</h4>
+                                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi mollitia dolor corporis!</p>
+                                <div class="link_strelka">
+                                    <a class="card__link" href="#">Learn more</a>
+                                    <img class="strelka" src="img/strelka.svg" alt="photo">
+                                </div>
+                            </div>
+                            <div class="info_b">
+                                <img class="card_img" src="img/card-3.svg" alt="card-3">
+                                <h4 class="fourth">Our news</h4>
+                                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus possimus aliquam ea quod?</p>
+                                <div class="link_strelka">
+                                    <a class="card__link" href="#">Learn more</a>
+                                    <img class="strelka" src="img/strelka.svg" alt="photo">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="our_info">    
+                            <h3 class="third">Our advantages</h3>
+                            <p class="text text_project">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <div class="project_item">
+                                <img class="project_img" src="img/project-1.png" alt="photo">
+                                <p class="project__text">Smart Home Installation</p>
+                            </div>
+                            <div class="project__parent">
+                                <div class="project_item project_item_margin"> 
+                                    <img class="project_img" src="img/project-2.png" alt="photo">
+                                    <p class="project__text_left">Sparklite App</p>
+                                </div>
+                                <div class="project_item"> 
+                                    <img class="project_img" src="img/project-3.png" alt="photo">
+                                    <p class="project__text_right">Car-Rapetition App</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div class="footer">   
+                    <div class="info_bottom">
+                        <div class="container">
+                            <div class="info_bottom_parent">
+                                <div class="info_bottom_upp">
+                                    <h3 class="third_third-3">Intersted to woek with our team?</h3>
+                                    <p class="text text_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                </div>
+                                <div class="info_bottom_talk">
+                                    <a href="#" class="talk">Let’s Talk</a>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="strip">
+                        <div class="container">
+                            <div class="info_link">
+                                <ul class="info_link-1" type="none">
+                                <li class="info_link-2 link_top"> <div class="span_link">1.</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                <li class="info_link-2"> <div class="span_link">2.</div> <a class="link_up" href="#">8-915-777-33-22</a></li>
+                                <li class="info_link-2"> <div class="span_link">3.</div> <a class="link_up" href="#">Hello.mail@mail.ru</a></li>
+                                </ul> 
+                                <div class="info_law">
+                                    <p class="text text_law">Все права защищены</p>
+                                </div>
+                            </div>
+                        </div>      
+                    </div> 
+        </div>
     </div>
 </body>
 </html>
