--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -41,7 +41,7 @@
                         </div>
                         <div class="phone">
                             <h4 class="fourth fourth_contact">PHONE</h4>
-                            <ul type="none">
+                            <ul class="phone_blik">
                                 <li>
                                     <div class="phone_tube">
                                         <div class="tube"><img src="../img/tube.svg" alt="poto"></div>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="online_service">
                             <h4 class="fourth fourth_contact">ONLINE SERVISE</h4>
-                            <ul type="none">
+                            <ul class="phone_blik">
                                 <li>
                                     <div class="planeta_site">
                                         <div class="planeta"><img src="../img/planeta.svg" alt="poto"></div>
@@ -117,7 +117,7 @@
         <hr class="strip">
         <div class="container">
             <div class="info_link">
-                <ul class="info_link-1" type="none">
+                <ul class="info_link-1">
                     <li class="info_link-2 link_top">
                         <div class="span_link">1.</div>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
